--- a/main.html
+++ b/main.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="hu">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Webshop</title>
     <link rel="stylesheet" href="main.css">
+    <script src="main.js"></script>
 </head>
 <body>
     <header>
@@ -13,107 +14,73 @@
     
     <nav>
         <ul>
-            <li><a href="#">Főoldal</a></li>
-            <li><a href="#">Termékek</a></li>
-            <li><a href="#">Rólunk</a></li>
-            <li><a href="#">Elérhetőség</a></li>
+            <li><a href="main.html">Főoldal</a></li>
+            <li><a href="termek.html">Termékek</a></li>
+            <li><a href="jatek.html">Játék letőltése</a></li>
+            <li><a href="rolunk.html">Rólunk</a></li>
+            <li><a href="elerheto.html">Elérhetőség</a></li>
         </ul>
     </nav>
 
     <main>
         <section class="product" id="product1">
-            <img src="product1.jpg" alt="Product 1">
-            <h2>Termék 1</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-            <p class="price">$99.99</p>
-            <button onclick="addToCart('product1', 'Product 1', 99.99)">Kosárhoz adás</button>
+            <img src="/WEB/képek/kard.png">
+            <h2>Törhetetlen kard</h2>
+            <p>kard</p>
+            <p class="price">10000 Ft</p>
+            <button onclick="addToCart('product1', 'Kard', 10000)">Kosárhoz adás</button>
         </section>
 
         <section class="product" id="product2">
-            <img src="product2.jpg" alt="Product 2">
-            <h2>Termék 2</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-            <p class="price">$49.99</p>
-            <button onclick="addToCart('product2', 'Product 2', 49.99)">Kosárhoz adás</button>
+            <img src="/WEB/képek/kulcs.png">
+            <h2>Mindent nyitó kulcs</h2>
+            <p>kulcs</p>
+            <p class="price">15000 Ft</p>
+            <button onclick="addToCart('product2', 'Kulcs', 15000)">Kosárhoz adás</button>
         </section>
 
-        <!-- Add more product sections here -->
+        <section class="product" id="product3">
+            <img src="/WEB/képek/karakter1.png">
+            <h2>Legjobb karakter1</h2>
+            <p>Karakter</p>
+            <p class="price">15000 Ft</p>
+            <button onclick="addToCart('product3', 'Karakter', 20000)">Kosárhoz adás</button>
+        </section>
+
+        <section class="product" id="product4">
+            <img src="/WEB/képek/karakter2.png">
+            <h2>Legjobb karakter2</h2>
+            <p>Karakter</p>
+            <p class="price">15000 Ft</p>
+            <button onclick="addToCart('product4', 'Karakter', 20000)">Kosárhoz adás</button>
+        </section>
+
+        <section class="product" id="product5">
+            <img src="/WEB/képek/karakter3.png">
+            <h2>Legjobb karakter3</h2>
+            <p>Karakter</p>
+            <p class="price">15000 Ft</p>
+            <button onclick="addToCart('product5', 'Karakter', 20000)">Kosárhoz adás</button>
+        </section>
+
+        <section class="product" id="product6">
+            <img src="/WEB/képek/karakter4.png">
+            <h2>Legjobb karakter4</h2>
+            <p>Karakter</p>
+            <p class="price">15000 Ft</p>
+            <button onclick="addToCart('product6', 'Karakter', 20000)">Kosárhoz adás</button>
+        </section>
     </main>
 
     <aside>
         <h2>Kosár</h2>
         <ul id="cart">
-            <!-- Cart items will be added here dynamically -->
         </ul>
-        <p>Végösszeg: $<span id="cart-total">0.00</span></p>
-        <button onclick="checkout()">Fizetés</button>
+        <button onclick="openCartPage()">Checkout</button>
     </aside>
     
     <footer>
         <p>&copy; 2023 My Webshop</p>
     </footer>
-
-    <script>
-        const cart = {};
-
-        function addToCart(productId, productName, productPrice) {
-            if (!cart[productId]) {
-                cart[productId] = {
-                    name: productName,
-                    price: productPrice,
-                    quantity: 1
-                };
-            } else {
-                cart[productId].quantity++;
-            }
-
-            updateCartDisplay();
-        }
-
-        function updateCartDisplay() {
-            const cartList = document.getElementById('cart');
-            const cartTotal = document.getElementById('cart-total');
-            let total = 0;
-
-            cartList.innerHTML = '';
-
-            for (const productId in cart) {
-                const { name, price, quantity } = cart[productId];
-                const listItem = document.createElement('li');
-                listItem.textContent = `${name} - $${price} x ${quantity}`;
-                cartList.appendChild(listItem);
-                total += price * quantity;
-            }
-
-            cartTotal.textContent = total.toFixed(2);
-        }
-
-        function checkout() {
-            // Implement your checkout logic here (e.g., send the cart data to a server).
-            alert('Checkout button clicked. Cart contents: ' + JSON.stringify(cart));
-        }
-    </script>
-    <aside>
-        <h2>Cart</h2>
-        <ul id="cart">
-            <!-- Cart items will be added here dynamically -->
-        </ul>
-        <p>Total: $<span id="cart-total">0.00</span></p>
-        <button onclick="openCartPage()">Checkout</button>
-    </aside>
-
-    <!-- ... Your existing JavaScript code ... -->
-
-    <script>
-        // ... Your existing JavaScript code ...
-
-        function openCartPage() {
-            // Save the cart data to localStorage before opening the cart page
-            localStorage.setItem('cart', JSON.stringify(cart));
-
-            // Open the cart.html page in a new window or tab
-            window.open('kosár.html');
-        }
-</script>
 </body>
 </html>
