--- a/main.html
+++ b/main.html
@@ -12,7 +12,7 @@
         <h1>Webshopunk</h1>
     </header>
     
-    <nav>
+    <nav class="navbar">
         <ul>
             <li><a href="main.html">Főoldal</a></li>
             <li><a href="termek.html">Termékek</a></li>
@@ -24,7 +24,7 @@
 
     <main>
         <section class="product" id="product1">
-            <img src="/WEB/képek/kard.png">
+            <img src="/Game/képek/kard.png">
             <h2>Törhetetlen kard</h2>
             <p>kard</p>
             <p class="price">10000 Ft</p>
@@ -32,7 +32,7 @@
         </section>
 
         <section class="product" id="product2">
-            <img src="/WEB/képek/kulcs.png">
+            <img src="/Game/képek/kulcs.png">
             <h2>Mindent nyitó kulcs</h2>
             <p>kulcs</p>
             <p class="price">15000 Ft</p>
@@ -40,7 +40,7 @@
         </section>
 
         <section class="product" id="product3">
-            <img src="/WEB/képek/karakter1.png">
+            <img src="/Game/képek/karakter1.png">
             <h2>Legjobb karakter1</h2>
             <p>Karakter</p>
             <p class="price">15000 Ft</p>
@@ -48,7 +48,7 @@
         </section>
 
         <section class="product" id="product4">
-            <img src="/WEB/képek/karakter2.png">
+            <img src="/Game/képek/karakter2.png">
             <h2>Legjobb karakter2</h2>
             <p>Karakter</p>
             <p class="price">15000 Ft</p>
@@ -56,7 +56,7 @@
         </section>
 
         <section class="product" id="product5">
-            <img src="/WEB/képek/karakter3.png">
+            <img src="/Game/képek/karakter3.png">
             <h2>Legjobb karakter3</h2>
             <p>Karakter</p>
             <p class="price">15000 Ft</p>
@@ -64,7 +64,7 @@
         </section>
 
         <section class="product" id="product6">
-            <img src="/WEB/képek/karakter4.png">
+            <img src="/Game/képek/karakter4.png">
             <h2>Legjobb karakter4</h2>
             <p>Karakter</p>
             <p class="price">15000 Ft</p>
