--- a/elerheto.html
+++ b/elerheto.html
@@ -11,8 +11,11 @@
 </head>
 
 <body>
-    <header>
+    <div class="container">
         <h1>Webshopunk</h1>
+        <div class="header-content">
+            <button onclick="goBack()"><img src="/Game/képek/93634.png" id="back-button"></button>
+        </div>
     </header>
 
     <nav class="navbar">
@@ -63,6 +66,7 @@
     <footer>
         <p>&copy; 2023 My Webshop</p>
     </footer>
+    </div>
 </body>
 
 </html>
