--- a/jatek.html
+++ b/jatek.html
@@ -8,9 +8,13 @@
     <script src="main.js"></script>
 </head>
 <body id="dowbcg">
-    <header>
-        <h1>Webshopunk</h1>
-    </header>
+    <div class="container">
+        <header>
+            <h1>Webshopunk</h1>
+            <div class="header-content">
+                <button onclick="goBack()"><img src="/Game/képek/93634.png" id="back-button"></button>
+            </div>
+        </header>
     
     <nav class="navbar">
         <ul>
@@ -31,5 +35,6 @@
     <footer id="dg-foot">
         <p>&copy; 2023 My Webshop</p>
     </footer>
+</div>
 </body>
 </html>
