--- a/termek.html
+++ b/termek.html
@@ -7,6 +7,13 @@
     <title>Document</title>
 </head>
 <body>
+    <div class="container">
+    <header>
+        <h1>Termekek</h1>
+        <div class="header-content">
+            <button onclick="goBack()"><img src="/Game/képek/93634.png" id="back-button"></button>
+        </div>
+    </header>
 
     <nav class="navbar">
         <ul>
@@ -17,5 +24,6 @@
             <li><a href="elerheto.html">Elérhetőség</a></li>
         </ul>
     </nav>
+</div>
 </body>
 </html>
