--- a/jatek.html
+++ b/jatek.html
@@ -3,19 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Webshop</title>
+    <title>Our Webshop</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css" />
     <link rel="stylesheet" href="main.css">
     <script src="main.js"></script>
 </head>
 <body id="dowbcg">
     <div class="container">
         <header>
-            <h1>Webshopunk</h1>
-            <div class="header-content">
-                <button onclick="goBack()"><img src="/Game/képek/93634.png" id="back-button"></button>
-            </div>
+            <h1>Játék letőltése</h1>
         </header>
-    
     <nav class="navbar">
         <ul>
             <li><a href="main.html">Főoldal</a></li>
@@ -23,6 +20,7 @@
             <li><a href="jatek.html">Játék letőltése</a></li>
             <li><a href="rolunk.html">Rólunk</a></li>
             <li><a href="elerheto.html">Elérhetőség</a></li>
+            <li class="logo"><a href="kosar.html"><i class="fa-solid fa-cart-shopping"></i></a></li>
         </ul>
     </nav>
 
