--- a/kosar.html
+++ b/kosar.html
@@ -3,16 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Kosár</title>
+    <title>Our Webshop</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css" />
     <link rel="stylesheet" href="main.css">
 </head>
 <body>
     <div class="container">
     <header>
-        <h1>Kosar</h1>
-        <div class="header-content">
-            <button onclick="goBack()"><img src="/Game/képek/93634.png" id="back-button"></button>
-        </div>
+        <h1>Kosár</h1>
     </header>
     
     <main>
