--- a/elerheto.html
+++ b/elerheto.html
@@ -4,20 +4,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Webshop</title>
+    <title>Our Webshop</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="main.css">
     <script src="main.js"></script>
 </head>
 
-<body>
+<body>  
     <div class="container">
-        <h1>Webshopunk</h1>
-        <div class="header-content">
-            <button onclick="goBack()"><img src="/Game/képek/93634.png" id="back-button"></button>
-        </div>
+        <h1>Elérhetőség</h1>
     </header>
-
     <nav class="navbar">
         <ul>
             <li><a href="main.html">Főoldal</a></li>
@@ -25,6 +22,7 @@
             <li><a href="jatek.html">Játék letőltése</a></li>
             <li><a href="rolunk.html">Rólunk</a></li>
             <li><a href="elerheto.html">Elérhetőség</a></li>
+            <li class="logo"><a href="kosar.html"><i class="fa-solid fa-cart-shopping"></i></a></li>
         </ul>
     </nav>
 
@@ -36,7 +34,7 @@
                     <div class="card-body">
                       <h4 class="card-title">Szívós Patrik</h4>
                       <p class="card-text">Webshop</p>
-                      <a href="#" class="btn btn-primary">Üzenet</a>
+                      <a href="" target="_blank"class="btn btn-primary">Üzenet</a>
                     </div>
                   </div>
             </div>
