--- a/main.html
+++ b/main.html
@@ -3,17 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Webshop</title>
+    <title>Our Webshop</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css" />
     <link rel="stylesheet" href="main.css">
-    <script src="main.js"></script>
 </head>
 <body>
     <div class="container">
         <header>
             <h1>Webshopunk</h1>
-            <div class="header-content">
-                <button onclick="goBack()"><img src="/Game/képek/93634.png" id="back-button"></button>
-            </div>
         </header>
         
         
@@ -24,6 +21,7 @@
                 <li><a href="jatek.html">Játék letőltése</a></li>
                 <li><a href="rolunk.html">Rólunk</a></li>
                 <li><a href="elerheto.html">Elérhetőség</a></li>
+                <li class="logo"><button onclick="openCartPage()"><i class="fa-solid fa-cart-shopping"></i></button></li>
             </ul>
         </nav>
 
@@ -87,6 +85,7 @@
         <footer>
             <p>&copy; 2023 My Webshop</p>
         </footer>
+        <script src="main.js"></script>
     </div>
 </body>
 </html>
