--- a/termek.html
+++ b/termek.html
@@ -24,7 +24,202 @@
         </ul>
     </nav>
     <main>
-
+        <section class="product" id="product1">
+            <img src="/Game/képek/kard.png">
+            <h2>Törhetetlen kard</h2>
+            <p>kard</p>
+            <p class="price">10000 Ft</p>
+            <button onclick="addToCart('product1', 'Kard', 10000)">Kosárhoz adás</button>
+        </section>
+        <section class="product" id="product1">
+            <img src="/Game/képek/kard.png">
+            <h2>Törhetetlen kard</h2>
+            <p>kard</p>
+            <p class="price">10000 Ft</p>
+            <button onclick="addToCart('product1', 'Kard', 10000)">Kosárhoz adás</button>
+        </section>
+        <section class="product" id="product1">
+            <img src="/Game/képek/kard.png">
+            <h2>Törhetetlen kard</h2>
+            <p>kard</p>
+            <p class="price">10000 Ft</p>
+            <button onclick="addToCart('product1', 'Kard', 10000)">Kosárhoz adás</button>
+        </section>
+        <section class="product" id="product1">
+            <img src="/Game/képek/kard.png">
+            <h2>Törhetetlen kard</h2>
+            <p>kard</p>
+            <p class="price">10000 Ft</p>
+            <button onclick="addToCart('product1', 'Kard', 10000)">Kosárhoz adás</button>
+        </section>
+        <section class="product" id="product1">
+            <img src="/Game/képek/kard.png">
+            <h2>Törhetetlen kard</h2>
+            <p>kard</p>
+            <p class="price">10000 Ft</p>
+            <button onclick="addToCart('product1', 'Kard', 10000)">Kosárhoz adás</button>
+        </section>
+        <section class="product" id="product1">
+            <img src="/Game/képek/kard.png">
+            <h2>Törhetetlen kard</h2>
+            <p>kard</p>
+            <p class="price">10000 Ft</p>
+            <button onclick="addToCart('product1', 'Kard', 10000)">Kosárhoz adás</button>
+        </section>
+        <section class="product" id="product1">
+            <img src="/Game/képek/kard.png">
+            <h2>Törhetetlen kard</h2>
+            <p>kard</p>
+            <p class="price">10000 Ft</p>
+            <button onclick="addToCart('product1', 'Kard', 10000)">Kosárhoz adás</button>
+        </section>
+        <section class="product" id="product1">
+            <img src="/Game/képek/kard.png">
+            <h2>Törhetetlen kard</h2>
+            <p>kard</p>
+            <p class="price">10000 Ft</p>
+            <button onclick="addToCart('product1', 'Kard', 10000)">Kosárhoz adás</button>
+        </section>
+        <section class="product" id="product1">
+            <img src="/Game/képek/kard.png">
+            <h2>Törhetetlen kard</h2>
+            <p>kard</p>
+            <p class="price">10000 Ft</p>
+            <button onclick="addToCart('product1', 'Kard', 10000)">Kosárhoz adás</button>
+        </section>
+        <section class="product" id="product1">
+            <img src="/Game/képek/kard.png">
+            <h2>Törhetetlen kard</h2>
+            <p>kard</p>
+            <p class="price">10000 Ft</p>
+            <button onclick="addToCart('product1', 'Kard', 10000)">Kosárhoz adás</button>
+        </section>
+        <section class="product" id="product1">
+            <img src="/Game/képek/kard.png">
+            <h2>Törhetetlen kard</h2>
+            <p>kard</p>
+            <p class="price">10000 Ft</p>
+            <button onclick="addToCart('product1', 'Kard', 10000)">Kosárhoz adás</button>
+        </section>
+        <section class="product" id="product1">
+            <img src="/Game/képek/kard.png">
+            <h2>Törhetetlen kard</h2>
+            <p>kard</p>
+            <p class="price">10000 Ft</p>
+            <button onclick="addToCart('product1', 'Kard', 10000)">Kosárhoz adás</button>
+        </section>
+        <section class="product" id="product1">
+            <img src="/Game/képek/kard.png">
+            <h2>Törhetetlen kard</h2>
+            <p>kard</p>
+            <p class="price">10000 Ft</p>
+            <button onclick="addToCart('product1', 'Kard', 10000)">Kosárhoz adás</button>
+        </section>
+        <section class="product" id="product1">
+            <img src="/Game/képek/kard.png">
+            <h2>Törhetetlen kard</h2>
+            <p>kard</p>
+            <p class="price">10000 Ft</p>
+            <button onclick="addToCart('product1', 'Kard', 10000)">Kosárhoz adás</button>
+        </section>
+        <section class="product" id="product1">
+            <img src="/Game/képek/kard.png">
+            <h2>Törhetetlen kard</h2>
+            <p>kard</p>
+            <p class="price">10000 Ft</p>
+            <button onclick="addToCart('product1', 'Kard', 10000)">Kosárhoz adás</button>
+        </section>
+        <section class="product" id="product1">
+            <img src="/Game/képek/kard.png">
+            <h2>Törhetetlen kard</h2>
+            <p>kard</p>
+            <p class="price">10000 Ft</p>
+            <button onclick="addToCart('product1', 'Kard', 10000)">Kosárhoz adás</button>
+        </section>
+        <section class="product" id="product1">
+            <img src="/Game/képek/kard.png">
+            <h2>Törhetetlen kard</h2>
+            <p>kard</p>
+            <p class="price">10000 Ft</p>
+            <button onclick="addToCart('product1', 'Kard', 10000)">Kosárhoz adás</button>
+        </section>
+        <section class="product" id="product1">
+            <img src="/Game/képek/kard.png">
+            <h2>Törhetetlen kard</h2>
+            <p>kard</p>
+            <p class="price">10000 Ft</p>
+            <button onclick="addToCart('product1', 'Kard', 10000)">Kosárhoz adás</button>
+        </section>
+        <section class="product" id="product1">
+            <img src="/Game/képek/kard.png">
+            <h2>Törhetetlen kard</h2>
+            <p>kard</p>
+            <p class="price">10000 Ft</p>
+            <button onclick="addToCart('product1', 'Kard', 10000)">Kosárhoz adás</button>
+        </section>
+        <section class="product" id="product1">
+            <img src="/Game/képek/kard.png">
+            <h2>Törhetetlen kard</h2>
+            <p>kard</p>
+            <p class="price">10000 Ft</p>
+            <button onclick="addToCart('product1', 'Kard', 10000)">Kosárhoz adás</button>
+        </section>
+        <section class="product" id="product1">
+            <img src="/Game/képek/kard.png">
+            <h2>Törhetetlen kard</h2>
+            <p>kard</p>
+            <p class="price">10000 Ft</p>
+            <button onclick="addToCart('product1', 'Kard', 10000)">Kosárhoz adás</button>
+        </section>
+        <section class="product" id="product1">
+            <img src="/Game/képek/kard.png">
+            <h2>Törhetetlen kard</h2>
+            <p>kard</p>
+            <p class="price">10000 Ft</p>
+            <button onclick="addToCart('product1', 'Kard', 10000)">Kosárhoz adás</button>
+        </section>
+        <section class="product" id="product1">
+            <img src="/Game/képek/kard.png">
+            <h2>Törhetetlen kard</h2>
+            <p>kard</p>
+            <p class="price">10000 Ft</p>
+            <button onclick="addToCart('product1', 'Kard', 10000)">Kosárhoz adás</button>
+        </section>
+        <section class="product" id="product1">
+            <img src="/Game/képek/kard.png">
+            <h2>Törhetetlen kard</h2>
+            <p>kard</p>
+            <p class="price">10000 Ft</p>
+            <button onclick="addToCart('product1', 'Kard', 10000)">Kosárhoz adás</button>
+        </section>
+        <section class="product" id="product1">
+            <img src="/Game/képek/kard.png">
+            <h2>Törhetetlen kard</h2>
+            <p>kard</p>
+            <p class="price">10000 Ft</p>
+            <button onclick="addToCart('product1', 'Kard', 10000)">Kosárhoz adás</button>
+        </section>
+        <section class="product" id="product1">
+            <img src="/Game/képek/kard.png">
+            <h2>Törhetetlen kard</h2>
+            <p>kard</p>
+            <p class="price">10000 Ft</p>
+            <button onclick="addToCart('product1', 'Kard', 10000)">Kosárhoz adás</button>
+        </section>
+        <section class="product" id="product1">
+            <img src="/Game/képek/kard.png">
+            <h2>Törhetetlen kard</h2>
+            <p>kard</p>
+            <p class="price">10000 Ft</p>
+            <button onclick="addToCart('product1', 'Kard', 10000)">Kosárhoz adás</button>
+        </section>
+        <section class="product" id="product1">
+            <img src="/Game/képek/kard.png">
+            <h2>Törhetetlen kard</h2>
+            <p>kard</p>
+            <p class="price">10000 Ft</p>
+            <button onclick="addToCart('product1', 'Kard', 10000)">Kosárhoz adás</button>
+        </section>
     </main>
     <aside>
         <h2>Kosár</h2>
