--- a/elerheto.html
+++ b/elerheto.html
@@ -34,7 +34,7 @@
                     <div class="card-body">
                       <h4 class="card-title">Szívós Patrik</h4>
                       <p class="card-text">Webshop</p>
-                      <a href="" target="_blank"class="btn btn-primary">Üzenet</a>
+                      <a href="#" class="btn btn-primary">Üzenet</a>
                     </div>
                   </div>
             </div>
