--- a/rolunk.html
+++ b/rolunk.html
@@ -3,9 +3,64 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=ű, initial-scale=1.0">
-    <title>Our Webshop</title>
+    <title>Rólunk</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="main.css">
 </head>
 <body>
-    
+    <div class="container">
+        <header>
+            <h1>Rólunk</h1>
+        </header>
+
+
+        <nav class="navbar">
+            <ul>
+                <div class="row">
+                    <div class="col-5">
+                        <li><a href="main.html">Főoldal</a></li>
+                        <li><a href="termek.html">Termékek</a></li>
+                        <li><a href="jatek.html">Játék letőltése</a></li>
+                        <li><a href="rolunk.html">Rólunk</a></li>
+                        <li><a href="elerheto.html">Elérhetőség</a></li>
+                        <li class="logo"><button onclick="openCartPage()"><i
+                                    class="fa-solid fa-cart-shopping"></i></button></li>
+                    </div>
+                    <div class="regform col-7">
+                        <form action="">
+                            <label for="">Név:</label>
+                            <br>
+                            <input type="text">
+                            <br>
+                            <label for="">Jelszó:</label>
+                            <br>
+                            <input type="password">
+                        </form>
+                        <li><button onclick="">Bejelentkezés</button></li>
+                        <li><a id="regisztralas" href="regisztralas.html" onclick="window.open(this.href, '_blank', 'width=500,height=500'); return false;">Regisztráció</a></li>
+                    </div>
+                </div>
+            </ul>
+        </nav>
+
+        <div class="container">
+            <main>
+            </main>
+
+
+            <aside>
+                <h2>Kosár</h2>
+                <ul id="cart">
+                </ul>
+                <button onclick="openCartPage()">Checkout</button>
+            </aside>
+
+            <footer>
+                <p>&copy; 2023 My Webshop</p>
+            </footer>
+            <script src="main.js"></script>
+        </div>
+    </div>
 </body>
 </html>
