--- a/regisztralas.html
+++ b/regisztralas.html
@@ -16,7 +16,27 @@
         <header>
             <h1>Regisztráció</h1>
         </header>
-        
+        <form id="registration-form" action="process_registration.php" method="POST">
+            <div class="form-group">
+                <label for="username">Felhasználónév:</label>
+                <input type="text" id="username" name="username" required>
+            </div>
+            <div class="form-group">
+                <label for="email">Email cím:</label>
+                <input type="email" id="email" name="email" required>
+            </div>
+            <div class="form-group">
+                <label for="password">Jelszó</label>
+                <input type="password" id="password" name="password" required>
+            </div>
+            <div class="form-group">
+                <label for="confirm-password">Jelszó mégegyszer</label>
+                <input type="password" id="confirm-password" name="confirm-password" required>
+            </div>
+            <div class="form-group">
+                <button type="submit">Regisztráció</button>
+            </div>
+        </form>
         <footer id="dg-foot">
             <p>&copy; 2023 My Webshop</p>
         </footer>
