--- a/elerheto.html
+++ b/elerheto.html
@@ -14,39 +14,40 @@
 <body>  
     <div class="container">
         <h1>Elérhetőség</h1>
-    </header>
-    <nav class="navbar">
-        <ul>
-            <li><a href="main.html">Főoldal</a></li>
-            <li><a href="termek.html">Termékek</a></li>
-            <li><a href="jatek.html">Játék letőltése</a></li>
-            <li><a href="rolunk.html">Rólunk</a></li>
-            <li><a href="elerheto.html">Elérhetőség</a></li>
-            <li class="logo"><a href="kosar.html"><i class="fa-solid fa-cart-shopping"></i></a></li>
-        </ul>
-    </nav>
+        </header>
+        <nav class="navbar">
+            <ul>
+                <li><a href="main.html">Főoldal</a></li>
+                <li><a href="termek.html">Termékek</a></li>
+                <li><a href="jatek.html">Játék letőltése</a></li>
+                <li><a href="rolunk.html">Rólunk</a></li>
+                <li><a href="elerheto.html">Elérhetőség</a></li>
+                <li class="logo"><a href="kosar.html"><i class="fa-solid fa-cart-shopping"></i></a></li>
+            </ul>
+        </nav>
 
-    <div class="container">
-        <div class="row">
-            <div class="col-3">
-                <div class="card-container">
-                    <div class="card" style="width: 300px;">
-                        <div class="card-inner">
-                            <div class="card-front">
-                                <img class="card-img-top infoimg" src="./avatars/avatar2.jfif" alt="Card image">
-                                <div class="card-body">
-                                    <h4 class="card-title">Szívós Patrik</h4>
-                                    <p class="card-text">Webshop</p>
-                                    <div class="flip-card-front"><p></p><button id="flip-card-btn-turn-to-back">Üzenet</button></div>
-                                </div>
-                            </div>
-                            <div class="card-back">
-                                <textarea id="message-text" placeholder="Írjon üzenetet..."></textarea>
-                                <button id="send-button" class="btn btn-success">Küldés</button>
-                            </div>
-                            <div class="flip-card-back"><p>Oldal</p><button id="flip-card-btn-turn-to-front">Vissza</button></div>
-                        </div>
-                    </div>
+        <div class="container">
+            <div class="row mx-auto">
+                <div class="contact-card col-4">
+                    <img class="card-img-top infoimg" src="./avatars/avatar2.jfif" alt="Card image">
+                    <h2>Szivós Patrik Dávid</h2>
+                    <h4>Weblap</h4>
+                    <p>E-mail címünk: <a href="mailto:szivospatrikdavid@gmail.com">szivospatrikdavid@gmail.com</a></p>
+                    <button id="messageButton">Üzenet küldése</button>
+                </div>
+                <div class="contact-card col-4">
+                    <img class="card-img-top infoimg" src="./avatars/avatar3.jfif" alt="Card image">
+                    <h2>Sándor Norbert</h2>
+                    <h4>Adatbázis</h4>
+                    <p>E-mail címünk: <a href="mailto:sandornorbi7@gmail.com">sandornorbi7@gmail.com</a></p>
+                    <button id="messageButton1">Üzenet küldése</button>
+                </div>
+                <div class="contact-card col-4">
+                    <img class="card-img-top infoimg" src="./avatars/avatar1.jfif" alt="Card image">
+                    <h2>Demeter István</h2>
+                    <h4>Játék</h4>
+                    <p>E-mail címünk: <a href="mailto:pistipisti57@gmail.com">pistipisti57@gmail.com</a></p>
+                    <button id="messageButton2">Üzenet küldése</button>
                 </div>
             </div>
         </div>
@@ -56,7 +57,7 @@
         <p>&copy; 2023 My Webshop</p>
     </footer>
     </div>
-    <script src="main.js"></script>
+    
 </body>
-
+<script src="elerhetoseg.js"></script>
 </html>
